Transformação do sistema em CRM

--- a/app/templates/alterar_senha.html
+++ b/app/templates/alterar_senha.html
@@ -58,9 +58,9 @@
                 </div>
             </div>
 
-            <div class="alterar-senha-buttons">
-                <a href="{{ url_for('perfil') }}" class="btn-secondary btn-cancelar-alterar">Cancelar</a>
-                <button type="submit" class="btn-primary btn-alterar-senha" id="submitBtn">Alterar Senha</button>
+            <div class="form-row" style="justify-content: flex-end; margin-top: 20px; margin-bottom: 0;">
+                <a href="{{ url_for('perfil') }}" class="btn btn-secondary">Cancelar</a>
+                <button type="submit" class="btn btn-primary">Salvar Alterações</button>
             </div>
         </form>
     </div>
