--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -33,7 +33,10 @@
                     <label for="senha">Senha:</label>
                     <input type="password" id="senha" name="senha" required>
                 </div>
-                <button type="submit" class="btn-primary btn-login">Entrar</button>
+
+                <div class="form-row" style="justify-content: center; margin-top: 20px; margin-bottom: 0;">
+                    <button type="submit" class="btn btn-primary">Entrar</button>
+                </div>
             </form>
         </div>
     </div>
