--- a/app/templates/editar_atividade.html
+++ b/app/templates/editar_atividade.html
@@ -14,9 +14,9 @@
 
             {% include '_form_registro.html' %}
 
-            <div class="form-row form-buttons">
-                <a href="{{ url_for('historico') }}" class="btn-secondary">Cancelar</a>
-                <button type="submit" class="btn-primary">Salvar Alterações</button>
+            <div class="form-row" style="justify-content: flex-end; margin-top: 20px; margin-bottom: 0;">
+                <a href="{{ url_for('historico') }}" class="btn btn-secondary">Cancelar</a>
+                <button type="submit" class="btn btn-primary">Salvar Alterações</button>
             </div>
 
         </form>
