--- a/app/templates/editar_setor.html
+++ b/app/templates/editar_setor.html
@@ -7,7 +7,7 @@
 
     <div class="page-header">
         <h1 class="page-title"><i class="fas fa-edit"></i> Editar Setor</h1>
-        <a href="{{ url_for('gestao_setores') }}" class="btn-secondary">
+        <a href="{{ url_for('gestao_setores') }}" class="btn btn-secondary">
             <i class="fas fa-arrow-left"></i> Voltar
         </a>
     </div>
@@ -33,9 +33,9 @@
                     </select>
                 </div>
             </div>
-            <div class="form-row form-buttons">
-                <a href="{{ url_for('gestao_setores') }}" class="btn-secondary">Cancelar</a>
-                <button type="submit" class="btn-primary">Salvar Alterações</button>
+            <div class="form-row" style="justify-content: flex-end; margin-top: 20px; margin-bottom: 0;">
+                <a href="{{ url_for('gestao_setores') }}" class="btn btn-secondary">Cancelar</a>
+                <button type="submit" class="btn btn-primary">Salvar Alterações</button>
             </div>
         </form>
     </div>
