--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -3,7 +3,7 @@
 {% block title %}Meu Perfil{% endblock %}
 
 {% block content %}
-    <h1><i class="fas fa-user-circle icon-title"></i> Meu Perfil</h1>
+    <h1 class="page-title"><i class="fas fa-user-circle icon-title"></i> Meu Perfil</h1>
 
     <div class="info-card profile-card">
         <div class="profile-header">
@@ -28,7 +28,7 @@
         </div>
 
         <div class="profile-actions">
-            <a href="{{ url_for('alterar_senha') }}" class="btn-primary">
+            <a href="{{ url_for('alterar_senha') }}" class="btn btn-primary">
                 <i class="fas fa-key"></i> Alterar Senha
             </a>
         </div>
